--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "node-sass --inlcuide-path scss/styles.scss css/styles.css",
+    "watch-css": "nodemon -e scss -x \"nmp run build-css\""
+
   },
   "author": "",
   "license": "ISC"
